<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.HarassmentActivityFragment"
    tools:showIn="@layout/activity_harassment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Report Title"
                android:contentDescription="@string/report_title_is"
                android:id="@+id/txt_title"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="8:42 PM"
                android:contentDescription="@string/report_time_is"
                android:id="@+id/txt_time"
                android:textColor="@color/colorSecondaryText"
                android:layout_below="@id/txt_title"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
                android:id="@+id/txt_body"
                android:contentDescription="@string/report_body_is"
                android:textColor="@color/colorPrimaryText"
                android:layout_below="@id/txt_time"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true" />


            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/txt_body"
                android:layout_margin="5dp"
                android:contentDescription="The Map"
                android:name="com.google.android.gms.maps.MapFragment" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
